addede Emoji component

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,20 @@ ul {
 img {
   width: 100%
 }
+
+.spin {
+  display: inline-block;
+  animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes twist-up {
+  to {
+    transform: rotateX(360deg);
+  }
+}
