fix outline styles

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5135,6 +5135,14 @@ video {
   opacity: 1;
 }
 
+.outline-none {
+  outline: 0;
+}
+
+.focus\:outline-none:focus {
+  outline: 0;
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -12076,6 +12084,14 @@ video {
 
   .sm\:opacity-100 {
     opacity: 1;
+  }
+
+  .sm\:outline-none {
+    outline: 0;
+  }
+
+  .sm\:focus\:outline-none:focus {
+    outline: 0;
   }
 
   .sm\:overflow-auto {
@@ -19022,6 +19038,14 @@ video {
     opacity: 1;
   }
 
+  .md\:outline-none {
+    outline: 0;
+  }
+
+  .md\:focus\:outline-none:focus {
+    outline: 0;
+  }
+
   .md\:overflow-auto {
     overflow: auto;
   }
@@ -25966,6 +25990,14 @@ video {
     opacity: 1;
   }
 
+  .lg\:outline-none {
+    outline: 0;
+  }
+
+  .lg\:focus\:outline-none:focus {
+    outline: 0;
+  }
+
   .lg\:overflow-auto {
     overflow: auto;
   }
@@ -32908,6 +32940,14 @@ video {
 
   .xl\:opacity-100 {
     opacity: 1;
+  }
+
+  .xl\:outline-none {
+    outline: 0;
+  }
+
+  .xl\:focus\:outline-none:focus {
+    outline: 0;
   }
 
   .xl\:overflow-auto {
