:art: added page indicator in nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,10 @@ button:focus {
   animation: spin 2s infinite linear;
 }
 
+.selected-nav-item {
+  box-shadow: inset 0px -2px var(--gray-600);
+}
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
