:art: added color-scheme to root

--- a/src/index.scss
+++ b/src/index.scss
@@ -103,6 +103,9 @@ body,
 }
 
 @media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark
+  }
   body {
     background-color: black;
     @include theme-dark();
