--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body,
 .theme-wrapper {
   transition: background-color 0.25s, color 0.25s;
