--- a/src/index.scss
+++ b/src/index.scss
@@ -108,7 +108,7 @@ body,
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color-scheme: dark
+    color-scheme: dark;
   }
   body {
     background-color: black;
